feat(orders): add functionality for placing and viewing orders

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,12 +6,24 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings":
+  {
+    "SqliteDatabase": "Data Source=app.db"
+  },
+  "CORS": {
+    "PolicyName": "AllowAllOrigins",
+    "AllowedOrigins": ["http://localhost:3000"],
+    "AllowedMethods": ["*"],
+    "AllowedHeaders": ["*"],
+    "AllowCredentials": true
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
         "Microsoft": "Information",
-        "System": "Information"
+        "System": "Information",
+        "Hangfire": "Warning"
       }
     },
     "WriteTo": [
@@ -21,13 +33,11 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/myapp-.txt",
+          "path": "logs/myapp-.txt",
           "rollingInterval": "Day"
         }
       }
     ],
-    "Enrich": [
-      "FromLogContext"
-    ]
+    "Enrich": ["FromLogContext"]
   }
 }
