fix: fix connection to frontend due to wrong CORS config

--- a/appsettings.Example.json
+++ b/appsettings.Example.json
@@ -78,5 +78,28 @@
       "PhoneNumber": "+569 20202020"
     },
     "RandomUserPassword": "User0123!"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information",
+        "Hangfire": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/myapp-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext"]
   }
 }
